--- a/app/src/main/res/layout-v17/activity_main.xml
+++ b/app/src/main/res/layout-v17/activity_main.xml
@@ -1,108 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/hidde"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_below="@id/main">
+<RelativeLayout
+    android:id="@+id/main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_alignLeft="@+id/hidden"
+    android:layout_alignStart="@+id/hidden"
+    android:layout_centerVertical="true"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ca.blogspot.electrail.bindecihex.MainActivity"
-    android:textAlignment="viewStart">
+    android:textAlignment="viewStart"
+    tools:context="ca.blogspot.electrail.bindecihex.MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/let_apos_s_convert"
         android:id="@+id/letsconvert"
-        android:layout_marginTop="43dp"
-        android:textSize="25sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="43dp"
+        android:text="@string/let_apos_s_convert"
+        android:textAlignment="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="25sp" />
 
     <EditText
+        android:id="@+id/numInput"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/numInput"
-        android:text="@string/value"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/letsconvert"
+        android:layout_marginTop="14dp"
+        android:hint="@string/value"
         android:inputType="none"
         android:textAlignment="center"
-        android:textSize="35sp"
-        android:layout_below="@+id/letsconvert"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="14dp" />
+        android:textSize="35sp" />
 
     <TextView
+        android:id="@+id/to"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/to"
-        android:id="@+id/to"
-        android:textSize="20sp"
-        android:layout_below="@+id/in"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp" />
+        android:layout_below="@+id/in"
+        android:layout_marginTop="10dp"
+        android:text="@string/to"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="17sp" />
 
     <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/final_spinner"
-        android:layout_alignTop="@+id/to"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/to"
+        android:layout_alignTop="@+id/to"
+        android:layout_toEndOf="@+id/to"
         android:layout_toRightOf="@+id/to"
-        android:layout_toLeftOf="@+id/result"
-        android:layout_toStartOf="@+id/result"
-        android:layout_marginLeft="30dp"
         android:textAlignment="textStart" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/result"
-        android:textSize="30sp"
-        android:layout_below="@+id/goButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/slide"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/answIs"
+        android:textAlignment="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="30sp" />
 
     <TextView
+        android:id="@+id/in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/in"
-        android:id="@+id/in"
-        android:textSize="20sp"
-        android:layout_marginTop="24dp"
-        android:layout_below="@+id/numInput"
+        android:layout_alignEnd="@+id/to"
         android:layout_alignRight="@+id/to"
-        android:layout_alignEnd="@+id/to" />
+        android:layout_below="@+id/numInput"
+        android:layout_marginTop="24dp"
+        android:text="@string/in"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="17sp" />
 
     <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/first_spinner"
-        android:layout_alignLeft="@+id/final_spinner"
-        android:layout_alignStart="@+id/final_spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/to"
-        android:layout_alignRight="@+id/result"
-        android:layout_alignEnd="@+id/result"
-        android:layout_alignTop="@+id/in" />
+        android:layout_alignTop="@+id/in"
+        android:layout_toEndOf="@+id/to"
+        android:layout_toRightOf="@+id/to" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/go"
         android:id="@+id/goButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/to"
+        android:layout_marginTop="20dp"
+        android:background="@color/colorPrimary"
+        android:text="@string/go"
+        android:textColor="@color/colorText"
         android:textSize="30sp"
-        android:layout_alignBottom="@+id/final_spinner"
-        android:layout_toRightOf="@+id/result"
-        android:layout_alignRight="@+id/numInput"
-        android:layout_alignEnd="@+id/numInput"
-        android:layout_alignTop="@+id/first_spinner" />
+
+        />
+    <Button
+        android:id="@+id/slide"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:fontFamily="monospace"
+
+        android:onClick="slideUpDown"
+        android:text="@string/seehist"
+        android:textColor="@color/colorLightText"
+        android:textSize="15sp"
+        android:textStyle="italic"
+        android:typeface="normal" />
+    <TextView
+        android:id="@+id/answIs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/goButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textSize="20sp"
+        android:textStyle="italic" />
 
 
+</RelativeLayout>
+<RelativeLayout
+android:id="@+id/hidden"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:layout_below="@id/main">
 
+<TextView
+    android:id="@+id/history"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentTop="true"
+    android:layout_centerHorizontal="true"
+    android:layout_marginTop="43dp"
+    android:text="@string/test"
+    android:textAlignment="center"
+    android:textAppearance="?android:attr/textAppearanceLarge"
+    android:textSize="25sp" />
+
+</RelativeLayout>
 </RelativeLayout>
