--- a/app/src/main/res/layout-v17/activity_main.xml
+++ b/app/src/main/res/layout-v17/activity_main.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/hidde"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_below="@id/main">
-<RelativeLayout
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -110,6 +106,7 @@
         android:layout_marginTop="20dp"
         android:background="@color/colorPrimary"
         android:text="@string/go"
+        android:alpha="1.0"
         android:textColor="@color/colorText"
         android:textSize="30sp"
 
@@ -140,26 +137,25 @@
         android:textAllCaps="true"
         android:textSize="20sp"
         android:textStyle="italic" />
+    <RelativeLayout
+        android:id="@+id/hidden"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@color/colorHist">
 
+        <TextView
+            android:id="@+id/history"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="43dp"
+            android:text="@string/test"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="25sp" />
 
-</RelativeLayout>
-<RelativeLayout
-android:id="@+id/hidden"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:layout_below="@id/main">
+    </RelativeLayout>
 
-<TextView
-    android:id="@+id/history"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentTop="true"
-    android:layout_centerHorizontal="true"
-    android:layout_marginTop="43dp"
-    android:text="@string/test"
-    android:textAlignment="center"
-    android:textAppearance="?android:attr/textAppearanceLarge"
-    android:textSize="25sp" />
-
-</RelativeLayout>
 </RelativeLayout>
