--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#40b9ff</color>
 
     <color name="colorText">#ffffff</color>
-    <color name="colorHist">#363636</color>
+    <color name="colorHist">#eeeeee</color>
     <color name="colorLightText">#7a7a7a</color>
 </resources>
