--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#de4343</color>
-    <color name="colorPrimaryDark">#c03d3d</color>
+    <color name="colorPrimaryDark">#b54545</color>
     <color name="colorAccent">#40b9ff</color>
 
     <color name="colorText">#ffffff</color>
     <color name="colorHist">#eeeeee</color>
     <color name="colorLightText">#7a7a7a</color>
+    <color name="colorHistLine1Text">#616161</color>
+    <color name="colorHistListBG">#e2e2e2</color>
 </resources>
