--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="hist_horizontal_margin">20dp</dimen>
+    <dimen name="hist_vertical_margin">20dp</dimen>
+    <dimen name="innerHist_horizontal_margin">10dp</dimen>
+    <dimen name="innerHist_vertical_margin">5dp</dimen>
 </resources>
