cleaned up and added material theme

--- a/app/src/main/res/layout-v17/activity_main.xml
+++ b/app/src/main/res/layout-v17/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="43dp"
+        android:layout_marginTop="70dp"
         android:text="@string/let_apos_s_convert"
         android:textAlignment="center"
         android:alpha="1.0"
@@ -37,11 +37,12 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/letsconvert"
         android:layout_marginTop="14dp"
+        android:alpha="1.0"
         android:hint="@string/value"
         android:inputType="none"
-        android:alpha="1.0"
         android:textAlignment="center"
-        android:textSize="35sp" />
+        android:textSize="35sp"
+        android:backgroundTint="@color/colorAccent"/>
 
     <TextView
         android:id="@+id/to"
@@ -167,7 +168,7 @@
             android:paddingLeft="@dimen/innerHist_horizontal_margin"
             android:paddingRight="@dimen/innerHist_horizontal_margin"
             android:paddingTop="@dimen/innerHist_vertical_margin"
-            android:text="@string/test"
+            android:text=""
             android:textAlignment="textStart"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -187,7 +188,7 @@
             android:paddingBottom="@dimen/innerHist_vertical_margin"
             android:paddingLeft="@dimen/innerHist_horizontal_margin"
             android:paddingRight="@dimen/innerHist_horizontal_margin"
-            android:text="@string/result1"
+            android:text=""
             android:textAlignment="textEnd"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -205,7 +206,7 @@
             android:paddingLeft="@dimen/innerHist_horizontal_margin"
             android:paddingRight="@dimen/innerHist_horizontal_margin"
             android:paddingTop="@dimen/innerHist_vertical_margin"
-            android:text="@string/test"
+            android:text=""
             android:textAlignment="textStart"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -224,7 +225,7 @@
             android:paddingBottom="@dimen/innerHist_vertical_margin"
             android:paddingLeft="@dimen/innerHist_horizontal_margin"
             android:paddingRight="@dimen/innerHist_horizontal_margin"
-            android:text="@string/result1"
+            android:text=""
             android:textAlignment="textEnd"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -243,7 +244,7 @@
             android:paddingLeft="@dimen/innerHist_horizontal_margin"
             android:paddingRight="@dimen/innerHist_horizontal_margin"
             android:paddingTop="@dimen/innerHist_vertical_margin"
-            android:text="@string/test"
+            android:text=""
             android:textAlignment="textStart"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -263,7 +264,7 @@
             android:paddingBottom="@dimen/innerHist_vertical_margin"
             android:paddingLeft="@dimen/innerHist_horizontal_margin"
             android:paddingRight="@dimen/innerHist_horizontal_margin"
-            android:text="@string/result1"
+            android:text=""
             android:textAlignment="textEnd"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -281,7 +282,7 @@
             android:paddingLeft="@dimen/innerHist_horizontal_margin"
             android:paddingRight="@dimen/innerHist_horizontal_margin"
             android:paddingTop="@dimen/innerHist_vertical_margin"
-            android:text="@string/test"
+            android:text=""
             android:textAlignment="textStart"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -300,7 +301,7 @@
             android:paddingBottom="@dimen/innerHist_vertical_margin"
             android:paddingLeft="@dimen/innerHist_horizontal_margin"
             android:paddingRight="@dimen/innerHist_horizontal_margin"
-            android:text="@string/result1"
+            android:text=""
             android:textAlignment="textEnd"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -319,7 +320,7 @@
             android:paddingLeft="@dimen/innerHist_horizontal_margin"
             android:paddingRight="@dimen/innerHist_horizontal_margin"
             android:paddingTop="@dimen/innerHist_vertical_margin"
-            android:text="@string/test"
+            android:text=""
             android:textAlignment="textStart"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -339,7 +340,7 @@
             android:paddingBottom="@dimen/innerHist_vertical_margin"
             android:paddingLeft="@dimen/innerHist_horizontal_margin"
             android:paddingRight="@dimen/innerHist_horizontal_margin"
-            android:text="@string/result1"
+            android:text=""
             android:textAlignment="textEnd"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -357,7 +358,7 @@
             android:paddingLeft="@dimen/innerHist_horizontal_margin"
             android:paddingRight="@dimen/innerHist_horizontal_margin"
             android:paddingTop="@dimen/innerHist_vertical_margin"
-            android:text="@string/test"
+            android:text=""
             android:textAlignment="textStart"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -376,7 +377,7 @@
             android:paddingBottom="@dimen/innerHist_vertical_margin"
             android:paddingLeft="@dimen/innerHist_horizontal_margin"
             android:paddingRight="@dimen/innerHist_horizontal_margin"
-            android:text="@string/result1"
+            android:text=""
             android:textAlignment="textEnd"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -424,6 +425,42 @@
             android:visibility="visible"
             android:alpha="0.0"/>
 
+        <TextView
+            android:id="@+id/history8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/result7"
+            android:layout_centerHorizontal="true"
+            android:paddingLeft="@dimen/innerHist_horizontal_margin"
+            android:paddingRight="@dimen/innerHist_horizontal_margin"
+            android:paddingTop="@dimen/innerHist_vertical_margin"
+            android:text=""
+            android:textAlignment="textStart"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="@color/colorHistLine1Text"
+            android:textStyle="italic"
+            android:visibility="visible"
+            android:alpha="0.0"/>
+
+        <TextView
+            android:id="@+id/result8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/history8"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="0dp"
+            android:paddingBottom="@dimen/innerHist_vertical_margin"
+            android:paddingLeft="@dimen/innerHist_horizontal_margin"
+            android:paddingRight="@dimen/innerHist_horizontal_margin"
+            android:text=""
+            android:textAlignment="textEnd"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="20sp"
+            android:visibility="visible"
+            android:alpha="0.0"/>
     </LinearLayout>
 
 </RelativeLayout>
